maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:25: error: not found: value a
    a=check(x,y-1,sol+1)
    ^ShortestPathMaze:26: error: not found: value a
    if (a==true){
        ^ShortestPathMaze:38: error: not enough arguments for method check: (x: Int, y: Int, sol: Int)Boolean.
Unspecified value parameter sol.
    if (check(x+1,y)==true){
             ^ShortestPathMaze:44: error: not enough arguments for method check: (x: Int, y: Int, sol: Int)Boolean.
Unspecified value parameter sol.
    if (check(x,y+1)==true){
             ^ShortestPathMaze:53: error: missing arguments for method aMurNord in class ShortestPathMaze;
follow this method with `_' if you want to treat it as a partially applied function
  if (!aMurNord && y!=0){
       ^ShortestPathMaze:54: error: not found: value abs
    if (sol>=abs(sol-getIndication(x,y-1))>=2){
             ^ShortestPathMaze:58: error: missing arguments for method aMurOuest in class ShortestPathMaze;
follow this method with `_' if you want to treat it as a partially applied function
  if (!aMurOuest && x!=0){
       ^ShortestPathMaze:59: error: not found: value abs
    if (sol>=abs(sol-getIndication(x-1,y))>=2){
             ^ShortestPathMaze:64: error: not found: value abs
    if (sol>=abs(sol-getIndication(x+1,y))>=2){
             ^ShortestPathMaze:69: error: not found: value abs
    if (sol>=abs(sol-getIndication(x,y-1))>=2){
             ^